Add many examples