@@ -1,8 +1,14 @@
 package com.kousenit.hr;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.*;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.stubbing.Answer;
 
 import java.time.LocalDate;
 import java.time.Month;
@@ -10,12 +16,12 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static java.util.stream.Collectors.toList;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 public class PersonServiceTest {
 
     @Mock
@@ -34,24 +40,29 @@ public class PersonServiceTest {
             new Person(14, "Anita", "Borg", LocalDate.of(1949, Month.JANUARY, 17)),
             new Person(5, "Barbara", "Liskov", LocalDate.of(1939, Month.NOVEMBER, 7)));
 
-    @Before
-    public void init() {
-        // MockitoAnnotations.initMocks(this);
-        MockitoAnnotations.openMocks(this);
-
-        when(repository.findAll())
-                .thenReturn(people);
-    }
+    // Can't be done because JUnit 5 extension is _strict_ and
+    // many of these tests don't call repository.findAll()
+//    @BeforeEach
+//    void setUp() {
+//        when(repository.findAll()).thenReturn(people);
+//    }
 
     @Test
     public void findMaxId() {
+        when(repository.findAll()).thenReturn(people);
+
         // assertThat(service.getHighestId(), is(14)); // Hamcrest matcher
         assertEquals(14, service.getHighestId().intValue());
+
+        verify(repository).findAll();
+        verifyNoMoreInteractions(repository);
     }
 
     @Test
     public void getLastNames() {
-        assertEquals(List.of("Hopper", "Lovelace", "Goldberg", "Borg", "Liskov"), service.getLastNames());
+        when(repository.findAll()).thenReturn(people);
+        assertEquals(people.stream().map(Person::last).toList(),
+                service.getLastNames());
     }
 
     @Test
@@ -71,12 +82,12 @@ public class PersonServiceTest {
                         people.get(4));
 
         // test the service (which uses the mock)
-        assertEquals(List.of(1, 2, 3, 14, 5), service.savePeople(people.toArray(new Person[0])));
+        assertEquals(List.of(1, 2, 3, 14, 5),
+                service.savePeople(people.toArray(Person[]::new)));
 
         // verify the interaction between the service and the mock
-        verify(repository, times(5)).save(any(Person.class));
+        verify(repository, times(people.size())).save(any(Person.class));
         verify(repository, never()).delete(any(Person.class));
-        verifyNoMoreInteractions(repository);
     }
 
     @Test
@@ -94,39 +105,51 @@ public class PersonServiceTest {
         when(repository.save(any(Person.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
 
-        List<Integer> ids = service.savePeople(people.toArray(new Person[0]));
+        List<Integer> ids = service.savePeople(people.toArray(Person[]::new));
 
         List<Integer> actuals = people.stream()
-                .map(Person::getId)
-                .collect(toList());
-        assertEquals(actuals, ids);
+                .map(Person::id)
+                .toList();
+        assertEquals(ids, actuals);
     }
 
-    @Test(expected = RuntimeException.class)
+    @Test
     public void savePersonThrowsException() {
         when(repository.save(any(Person.class)))
                 .thenThrow(RuntimeException.class);
 
-        service.savePeople(people.get(0));
+        assertThrows(RuntimeException.class, () -> service.savePeople(people.get(0)));
     }
 
     @Test
     public void createPerson() {
         Person hopper = people.get(0);
-
-        Person person = service.createPerson(hopper.getId(),
-                hopper.getFirst(),
-                hopper.getLast(),
-                hopper.getDob());
+        service.createPerson(
+                hopper.id(),
+                hopper.first(),
+                hopper.last(),
+                hopper.dob());
 
         verify(repository).save(personArg.capture());
-        assertEquals(hopper, personArg.getValue());
-        assertEquals(hopper, person);
+
+        assertEquals(personArg.getValue(), hopper);
+    }
+
+    @Test
+    public void createPersonUsingDateString() {
+        Person hopper = people.get(0);
+
+        when(repository.save(hopper)).thenReturn(hopper); // generalize this with an answer
+        Person actual = service.createPerson(1, "Grace", "Hopper", "1906-12-09");
+
+        verify(repository).save(personArg.capture());
+        assertThat(personArg.getValue()).isEqualTo(hopper);
+        assertThat(actual).isEqualTo(hopper);
     }
 
     @Test
     public void deleteAll() {
-        // Not necessary, but works
+        when(repository.findAll()).thenReturn(people);
         doNothing().when(repository).delete(any(Person.class));
 
         service.deleteAll();
@@ -143,19 +166,18 @@ public class PersonServiceTest {
         when(repository.findById(argThat(id -> id > 14))).thenReturn(Optional.empty());
 
         List<Person> personList = service.findByIds(999);
-        assertEquals(0, personList.size());
+        assertTrue(personList.isEmpty());
     }
 
     @Test
     public void findByIdsThatDoExist() {
         when(repository.findById(anyInt()))
                 .thenAnswer(invocation -> people.stream()
-                        .filter(person -> invocation.getArgument(0).equals(person.getId()))
+                        .filter(person ->
+                                invocation.getArgument(0).equals(person.id()))
                         .findFirst());
 
         List<Person> personList = service.findByIds(1, 3, 5);
-        assertTrue(personList.contains(people.get(0)));
-        assertTrue(personList.contains(people.get(2)));
-        assertTrue(personList.contains(people.get(4)));
+        assertEquals(List.of(people.get(0), people.get(2), people.get(4)), personList);
     }
 }
